k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hr-backend
  template:
    metadata:
      labels:
        app: hr-backend
    spec:
      containers:
      - name: backend-container
        image: jeffrinjojo/hr-backend:v40
        ports:
        - containerPort: 5000
