k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hr-frontend
  template:
    metadata:
      labels:
        app: hr-frontend
    spec:
      containers:
      - name: frontend-container
        image: jeffrinjojo/hr-frontend:v41
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
