k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.hr-system.local # Your fake local domain name
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hr-backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hr-frontend-service
            port:
              number: 80
